crates/reinhardt-core/macros/tests/ui/model/fail/missing_app_label.stderr
error: app_label attribute is required in #[model(...)]
 --> tests/ui/model/fail/missing_app_label.rs:6:8
  |
6 | struct User {
  |        ^^^^
